# python-boilerplate-v2

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  setup.py
{{cookiecutter.project_name}}/.github/workflows/: compatibility_test.yml  test.yml  twine_release.yml
{{cookiecutter.project_name}}/docs/: autosumm.rst  index.rst
{{cookiecutter.project_name}}/docs_config/: conf.py  current_release.rst
{{cookiecutter.project_name}}/notebooks/: doc-000-intro.ipynb  doc-001-quickstart.ipynb
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/tests/: test_init.py
