[project]
name = "{{cookiecutter.project_name}}"
dynamic = ["version", "description"]
authors = [{name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = []

[project.optional-dependencies]
test = [ "branthebuilder"]
doc = [
    "sphinx",
    "graphviz",
    "sphinx-automodapi",
    "pygments",
    "jupyter",
    "toml"
]

[project.urls]
Homepage = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.branb]
line-length = 88
