[project]
name = "{{cookiecutter.project_name}}"
description = "{{cookiecutter.description}}"
dynamic = ["version"]
authors = [{name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = []

[project.urls]
Homepage = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"

[dependency-groups]
test = ["branthebuilder[test]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "{{cookiecutter.project_name}}/__init__.py"

[tool.ruff.lint]
select = ["E", "F", "I"]
